<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="@dimen/linear_layout_width">



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text_color_white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/user_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text_color_white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/password"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text_color_white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/company_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text_color_white"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/action"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/text_color_white"/>



</LinearLayout>