<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@color/another_color"
    android:layout_height="@dimen/field_height_small">

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:textSize="@dimen/company_name_text_size"
        android:textColor="@color/text_color_white"
        android:paddingStart="@dimen/default_padding_left"
        android:text="@string/item"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/company_name_text_size"
        android:textColor="@color/text_color_white"
        android:paddingStart="@dimen/default_padding_left"
        android:text="@string/received"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/company_name_text_size"
        android:textColor="@color/text_color_white"
        android:paddingStart="@dimen/default_padding_left"
        android:text="@string/consumed"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/company_name_text_size"
        android:textColor="@color/text_color_white"
        android:paddingStart="@dimen/default_padding_left"
        android:text="@string/balance"/>

</LinearLayout>