<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_register_image"
    tools:context="net.optimusbs.sohelcon.Fragments.MainFragment.Activity.InsertActivityFragment">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="Insert Activity"
        android:gravity="center"
        android:id="@+id/title"
        android:textAllCaps="true"
        android:padding="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:alpha=".6"
                android:hint="@string/start_date"
                android:focusable="false"
                android:inputType="date"
                android:id="@+id/insert_activity_start_date"/>

            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:alpha=".6"
                android:focusable="false"
                android:hint="@string/finished_date"
                android:inputType="date"
                android:id="@+id/insert_activity_finished_date"/>


            <net.optimusbs.sohelcon.CustomView.MyAutoCompleteTextView
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:alpha=".6"
                android:hint="@string/activity_name"
                android:inputType="text"
                android:id="@+id/insert_activity_activity_name"/>


            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:alpha=".6"
                android:hint="@string/volume_of_works"
                android:inputType="numberDecimal"
                android:id="@+id/insert_activity_volume_of_works"/>
            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:alpha=".6"
                android:hint="@string/unit_rate"
                android:inputType="numberDecimal"
                android:id="@+id/insert_activity_unit_rate"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/insert_activity_add"
                android:text="@string/button_add"
                android:layout_gravity="center"
                android:textColor="@color/text_color_white"
                android:background="@drawable/button_selector"/>
        </LinearLayout>



    </ScrollView>


</LinearLayout>
