<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_register_image"
    tools:context="net.optimusbs.sohelcon.Fragments.MainFragment.Finance.CreditFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="Credit Form"
        android:textAllCaps="true"
        android:id="@+id/title"
        android:textSize="20sp"/>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:paddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:alpha=".6"
                android:hint="@string/expenditure_date"
                android:inputType="date"
                android:focusable="false"
                android:id="@+id/credit_trasaction_date"/>

            <net.optimusbs.sohelcon.CustomView.MyAutoCompleteTextView
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:alpha=".6"
                android:hint="@string/description"
                android:inputType="text"
                android:id="@+id/credit_description"/>

            <net.optimusbs.sohelcon.CustomView.MyAutoCompleteTextView
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:alpha=".6"
                android:hint="@string/head"
                android:inputType="text"
                android:id="@+id/credit_head"/>

            <net.optimusbs.sohelcon.CustomView.MyEditText
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:alpha=".6"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:id="@+id/credit_amount"/>


        </LinearLayout>



    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/credit_add"
        android:text="@string/button_add"
        android:layout_gravity="center"
        android:textColor="@color/text_color_white"
        android:background="@drawable/button_selector"/>

</LinearLayout>
