<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/linear_layout_width">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:paddingLeft="@dimen/default_padding_left"
                android:paddingBottom="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:textColor="@color/text_color_white"
                android:background="@color/colorPrimary"
                android:text="@string/activity_name"
                android:gravity="center_vertical|start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/default_padding_left"
                android:paddingBottom="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:textColor="@color/text_color_white"
                android:background="@color/colorPrimary"
                android:text="@string/volume_of_works"
                android:gravity="center_vertical|start"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="@dimen/default_padding_left"
                android:paddingBottom="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:textColor="@color/text_color_white"
                android:background="@color/colorPrimary"
                android:text="@string/volume_of_workdone"
                android:gravity="center_vertical|start"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.75"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/text_color_white"
                    android:background="@color/colorPrimary"
                    android:text="@string/action"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>





</LinearLayout>